--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1782,7 +1782,7 @@
     "message": "Email"
   },
   "profile.details.label.email-verified": {
-    "message": "Email Verified"
+    "message": "Email verified"
   },
   "profile.details.label.has-password": {
     "message": "Has password"
