--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1781,6 +1781,9 @@
   "profile.details.label.email": {
     "message": "Email"
   },
+  "profile.details.label.email-verified": {
+    "message": "Email verified"
+  },
   "profile.details.label.has-password": {
     "message": "Has password"
   },
