--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -677,6 +677,66 @@
   "project.about.links.wiki": {
     "defaultMessage": "Visit wiki"
   },
+  "project.environment.client-and-server.description": {
+    "defaultMessage": "Has some functionality on both the client and server, even if only partially."
+  },
+  "project.environment.client-and-server.title": {
+    "defaultMessage": "Client and server"
+  },
+  "project.environment.client-only-server-optional.description": {
+    "defaultMessage": "Has some functionality on both the client and server, even if only partially."
+  },
+  "project.environment.client-only-server-optional.title": {
+    "defaultMessage": "Client and server"
+  },
+  "project.environment.client-only.description": {
+    "defaultMessage": "All functionality is done client-side and is compatible with vanilla servers."
+  },
+  "project.environment.client-only.title": {
+    "defaultMessage": "Client-side only"
+  },
+  "project.environment.client-or-server-prefers-both.description": {
+    "defaultMessage": "Has some functionality on both the client and server, even if only partially."
+  },
+  "project.environment.client-or-server-prefers-both.title": {
+    "defaultMessage": "Client and server"
+  },
+  "project.environment.client-or-server.description": {
+    "defaultMessage": "Has some functionality on both the client and server, even if only partially."
+  },
+  "project.environment.client-or-server.title": {
+    "defaultMessage": "Client and server"
+  },
+  "project.environment.dedicated-server-only.description": {
+    "defaultMessage": "All functionality is done server-side and is compatible with vanilla clients."
+  },
+  "project.environment.dedicated-server-only.title": {
+    "defaultMessage": "Server-side only"
+  },
+  "project.environment.server-only-client-optional.description": {
+    "defaultMessage": "Has some functionality on both the client and server, even if only partially."
+  },
+  "project.environment.server-only-client-optional.title": {
+    "defaultMessage": "Client and server"
+  },
+  "project.environment.server-only.description": {
+    "defaultMessage": "All functionality is done server-side and is compatible with vanilla clients."
+  },
+  "project.environment.server-only.title": {
+    "defaultMessage": "Server-side only"
+  },
+  "project.environment.singleplayer-only.description": {
+    "defaultMessage": "Only functions in Singleplayer or when not connected to a Multiplayer server."
+  },
+  "project.environment.singleplayer-only.title": {
+    "defaultMessage": "Singleplayer only"
+  },
+  "project.environment.unknown.description": {
+    "defaultMessage": "The environment for this version could not be determined."
+  },
+  "project.environment.unknown.title": {
+    "defaultMessage": "Unknown environment"
+  },
   "project.settings.analytics.title": {
     "defaultMessage": "Analytics"
   },
