--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -980,11 +980,29 @@
   "dashboard.withdraw.completion.wallet": {
     "message": "Wallet"
   },
+  "dashboard.withdraw.error.account-not-linked.text": {
+    "message": "Please link your payment account before withdrawing."
+  },
+  "dashboard.withdraw.error.account-not-linked.title": {
+    "message": "Account not linked"
+  },
+  "dashboard.withdraw.error.email-verification.text": {
+    "message": "You must verify your email address before withdrawing funds."
+  },
+  "dashboard.withdraw.error.email-verification.title": {
+    "message": "Email verification required"
+  },
   "dashboard.withdraw.error.generic.text": {
-    "message": "We were unable to submit your withdrawal request, please check your details or contact support."
+    "message": "We were unable to submit your withdrawal request, please check your details or contact support.\n{error}"
   },
   "dashboard.withdraw.error.generic.title": {
     "message": "Unable to withdraw"
+  },
+  "dashboard.withdraw.error.insufficient-balance.text": {
+    "message": "You do not have enough funds to make this withdrawal."
+  },
+  "dashboard.withdraw.error.insufficient-balance.title": {
+    "message": "Insufficient balance"
   },
   "dashboard.withdraw.error.invalid-address.text": {
     "message": "The address you provided could not be verified. Please check your address details."
@@ -1009,6 +1027,12 @@
   },
   "dashboard.withdraw.error.minimum-not-met.title": {
     "message": "Amount too low"
+  },
+  "dashboard.withdraw.error.paypal-country-mismatch.text": {
+    "message": "Please use the correct PayPal transfer option for your region (US or International)."
+  },
+  "dashboard.withdraw.error.paypal-country-mismatch.title": {
+    "message": "PayPal region mismatch"
   },
   "dashboard.withdraw.error.tax-form.text": {
     "message": "You must complete a tax form to submit your withdrawal request."
