--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -593,24 +593,6 @@
   "project.about.compatibility.environments": {
     "defaultMessage": "Supported environments"
   },
-  "project.about.compatibility.environments.client-and-server": {
-    "defaultMessage": "Client and server"
-  },
-  "project.about.compatibility.environments.client-side": {
-    "defaultMessage": "Client-side"
-  },
-  "project.about.compatibility.environments.dedicated-servers-only": {
-    "defaultMessage": "Dedicated servers only"
-  },
-  "project.about.compatibility.environments.server-side": {
-    "defaultMessage": "Server-side"
-  },
-  "project.about.compatibility.environments.singleplayer": {
-    "defaultMessage": "Singleplayer"
-  },
-  "project.about.compatibility.environments.singleplayer-only": {
-    "defaultMessage": "Singleplayer only"
-  },
   "project.about.compatibility.game.minecraftJava": {
     "defaultMessage": "Minecraft: Java Edition"
   },
@@ -681,13 +663,13 @@
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
   },
   "project.environment.client-and-server.title": {
-    "defaultMessage": "Client and server"
+    "defaultMessage": "Client and server, required on both"
   },
   "project.environment.client-only-server-optional.description": {
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
   },
   "project.environment.client-only-server-optional.title": {
-    "defaultMessage": "Client and server"
+    "defaultMessage": "Client and server, optional on server"
   },
   "project.environment.client-only.description": {
     "defaultMessage": "All functionality is done client-side and is compatible with vanilla servers."
@@ -699,13 +681,13 @@
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
   },
   "project.environment.client-or-server-prefers-both.title": {
-    "defaultMessage": "Client and server"
+    "defaultMessage": "Client and server, best when installed on both"
   },
   "project.environment.client-or-server.description": {
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
   },
   "project.environment.client-or-server.title": {
-    "defaultMessage": "Client and server"
+    "defaultMessage": "Client and server, optional on both"
   },
   "project.environment.dedicated-server-only.description": {
     "defaultMessage": "All functionality is done server-side and is compatible with vanilla clients."
@@ -717,19 +699,40 @@
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
   },
   "project.environment.server-only-client-optional.title": {
-    "defaultMessage": "Client and server"
+    "defaultMessage": "Client and server, optional on client"
   },
   "project.environment.server-only.description": {
     "defaultMessage": "All functionality is done server-side and is compatible with vanilla clients."
   },
   "project.environment.server-only.title": {
-    "defaultMessage": "Server-side only"
+    "defaultMessage": "Server-side only, works in singleplayer too"
   },
   "project.environment.singleplayer-only.description": {
     "defaultMessage": "Only functions in Singleplayer or when not connected to a Multiplayer server."
   },
   "project.environment.singleplayer-only.title": {
     "defaultMessage": "Singleplayer only"
+  },
+  "project.environment.tag.client": {
+    "defaultMessage": "Client"
+  },
+  "project.environment.tag.client-optional": {
+    "defaultMessage": "Client optional"
+  },
+  "project.environment.tag.not-applicable": {
+    "defaultMessage": "N/A"
+  },
+  "project.environment.tag.server": {
+    "defaultMessage": "Server"
+  },
+  "project.environment.tag.server-optional": {
+    "defaultMessage": "Server optional"
+  },
+  "project.environment.tag.singleplayer": {
+    "defaultMessage": "Singleplayer"
+  },
+  "project.environment.tag.unknown": {
+    "defaultMessage": "Unknown"
   },
   "project.environment.unknown.description": {
     "defaultMessage": "The environment for this version could not be determined."
